# SimpleGL

./: CMakeLists.txt  README.md
include/: simplegl.h
src/: opengl_demo.cc  simplegl.cc  test_opengl.cc
